Update description in pubspec.yaml
Removed Chinese description from pubspec.yaml.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: jmessage_flutter
-description: JIGUANG officially supported JMessage Flutter plugin (Android & iOS). 极光推送官方支持的 Flutter 插件（Android & iOS）(https://www.jiguang.cn).
+description: JIGUANG officially supported JMessage Flutter plugin (Android & iOS)
 version: 2.2.1
 homepage: https://www.jiguang.cn
 
